--- a/equipos/girona/girona.html
+++ b/equipos/girona/girona.html
@@ -85,7 +85,7 @@
         <div class="row mt-5 d-flex justify-content-center">
 
             <div class="col-lg-4 text-center">
-                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorCelta.png">
+                <img class="rounded-circle" width="140" height="140" src="../../entrenadores/imgEntrenadores/entrenadorGirona.png">
                 </img>
 
                 <h2>Michel</h2>
@@ -107,7 +107,7 @@
 
         <div class="row text-center">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioSivera.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/pauloGazzaniga.png">
                 </img>
 
                 <h2>Paulo Gazzaniga</h2>
@@ -115,7 +115,7 @@
                 <button class="btn btn-secondary bg-primary eliminarPorteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/jesusOwono.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/juanCarlos.png">
                 </img>
 
                 <h2>Juan Carlos</h2>
@@ -133,7 +133,7 @@
 
         <div class="row text-center" id="defensa">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/andoniGorosabel.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/miguelGutierrez.png">
                 </img>
 
                 <h2>Miguel Gutiérrez</h2>
@@ -141,7 +141,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rubenDuarte.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/arnauMartinez.png">
                 </img>
 
                 <h2>Arnau Martínez</h2>
@@ -149,7 +149,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/sedlar.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/davidLopez.png">
                 </img>
 
                 <h2>David López</h2>
@@ -164,7 +164,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/nahuelTenaglia.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/valeryFernandez.png">
                 </img>
 
                 <h2>Valery Fernández</h2>
@@ -172,7 +172,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/juanpe.png">
                 </img>
 
                 <h2>Juanpe</h2>
@@ -180,7 +180,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDefensas">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/josedaAlvarez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/daleyBlind.png">
                 </img>
 
                 <h2>Daley Blind</h2>
@@ -190,7 +190,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/rafaMarín.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/yanCouto.png">
                 </img>
 
                 <h2>Yan Couto</h2>
@@ -209,7 +209,7 @@
 
         <div class="row text-center" id="mediocentros">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/anderGuevara.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/borjaGarcia.png">
                 </img>
 
                 <h2>Borja García</h2>
@@ -217,7 +217,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/antonioBlanco.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/aleixGarcia.png">
                 </img>
 
                 <h2>Aleix García</h2>
@@ -225,7 +225,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/hagi.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/pabloTorre.png">
                 </img>
 
                 <h2>Pablo Torre</h2>
@@ -240,7 +240,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/guridi.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/yangelHerrera.png">
                 </img>
 
                 <h2>Yangel Herrera</h2>
@@ -248,7 +248,7 @@
                 <button class="btn btn-secondary bg-primary eliminarMediocentros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/carlosBenavidez.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/jhonSolis.png">
                 </img>
 
                 <h2>Jhon Solis</h2>
@@ -257,7 +257,7 @@
             </div><!-- /.col-lg-4 -->
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/guridi.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/ivanMartin.png">
                 </img>
 
                 <h2>Iván Martín</h2>
@@ -278,7 +278,7 @@
 
         <div class="row text-center" id="delantero">
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/luisRioja.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/cristhianStuani.png">
                 </img>
 
                 <h2>Cristhian Stuani</h2>
@@ -286,7 +286,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/kikeGarcia.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/viktorTsygankov.png">
                 </img>
 
                 <h2>Viktor Tsygankov</h2>
@@ -294,7 +294,7 @@
                 <button class="btn btn-secondary bg-primary eliminarDelanteros">Eliminar jugador</button>
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/alkain.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/artemDovbyk.png">
                 </img>
 
                 <h2>Artem Dobryk</h2>
@@ -309,7 +309,7 @@
 
 
             <div class="col-lg-4 mb-5">
-                <img class="rounded-circle" width="140" height="140" src="imgAlaves/abde.png">
+                <img class="rounded-circle" width="140" height="140" src="../../jugadores/girona/savio.png">
                 </img>
 
                 <h2>Sávio</h2>
